<resources>
    <string name="app_name">PopularMoviesPt1</string>
    <string name="movie_title">Title: </string>
    <string name="overview">Summary: </string>
    <string name="year">Release Year: </string>
    <string name="reviews">Reviews: </string>
    <string name="rating">Film Rating: </string>
    <string name="trailers">Trailers: </string>
    <string name="underscore">_______________________________</string>

</resources>
