<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolar_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorAccent"
        >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie_title"
            android:textSize="36sp"
            android:textColor="#FFFFFF"
            android:padding="32dp"
            />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:context=".DetailsActivity"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_poster_thumbnail"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_margin="16dp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="8dp"
                    >
                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textSize="32sp"
                        android:layout_margin="8dp"
                        />
                    <TextView
                        android:id="@+id/tv_length"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/length"
                        android:textSize="24sp"
                        android:layout_margin="8dp"
                        />
                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textSize="16sp"
                        android:layout_margin="8dp"
                        />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/overview"
                android:textSize="16sp"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/tv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textSize="24sp"
                android:layout_margin="8dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <ProgressBar
                    android:id="@+id/trailers_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_trailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    />
             </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>